<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Fon"
    tools:theme="@style/MyTheme">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:id="@+id/containerTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/space_8dp"
            android:showDividers="middle"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/hat_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_78dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/focus_img" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </View>

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_53dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/back_img"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:background="@color/black"
                android:backgroundTint="@color/black" />





            <TextView
                android:id="@+id/textView"
                style="@style/RegisterStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Registration"

                />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/Annushka"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailLayout"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMail"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Mail"

                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Password"

                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordConfirm"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPasswordConfirm"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/PasswordConfirm"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_16dp"
                android:orientation="horizontal"

                >


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_have_account"
                    style="@style/CustomButtonMaterial"

                    android:layout_width="@dimen/_152dp"
                    android:layout_height="match_parent"
                    android:text="@string/Have_acc"

                    tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_safe"
                    style="@style/CustomButtonSave"

                    android:layout_width="@dimen/_152dp"
                    android:layout_height="match_parent"
                    android:text="@string/Save"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
